--- a/hw1_markdown.Rmd
+++ b/hw1_markdown.Rmd
@@ -25,7 +25,6 @@ if (requireNamespace("thematic"))
   thematic::thematic_rmd(font = "auto")
 ```
 
-
 ```{r package, message=FALSE}
 
 rm(list = ls())
@@ -35,31 +34,24 @@ seed <- 1234
 set.seed(seed) 
 
 # Libraries and Data ---------------------------------------------------------------
-library(glmnet)
-library(NMOF)
-library(parallel)
-library(snow)
+
+pkt <- c('glmnet', 'NMOF', 'parallel', 'snow', 'ggplot2', 'reshape2', 'gridExtra')
+invisible(lapply(pkt, require, character.only = TRUE))
 
 ```
 
-
 ## Purpose & Statistical tools used
 
-
 [TODO]
-
 
 ## Be linear in transformed feature space
 
 [TODO]
 
-
-
 ## Implementation of the truncated power basis
 
+[TODO] [TODO] Spiegare perchè usiamo solo le potenze dispari
 
-[TODO]
-[TODO] Spiegare perchè usiamo solo le potenze dispari
 ```{r power_function}
 
 # Function used to compute the feature matrix
@@ -86,35 +78,36 @@ power_functions <- function(d, q, knots, x){
 
 ```
 
-
-[TODO Màtteo]
+[TODO Matteo]
 
 ```{r plot truncated power function}
-d <- c(1 , 3)  # degree
-q <- c(3,10)  # Number of knots used
-par(mfrow = c(2,2))
 
-xx <- seq(0,1,length.out = 1000)
-knots <- seq(0 , 1 , length.out = q[1]+2)[2:(q[1]+1)]
-graph_1 <-power_functions( d[1],  q[1], knots, xx)
-plot(xx,graph_1[,2])
+plot_func <- function(d, q){
+  knots <- seq(0, 1, length.out = q+2)[2 : (q+1)]
+  df <- data.frame(power_functions(d, q, knots, xx))
+  df <- cbind('xx' = xx, df)
+  df <- melt(df,  id.vars = 'xx')
   
+  graph <- ggplot(data=df, aes(x = xx, y = value, color = variable)) + 
+    geom_line(linewidth = 1.1) + 
+    ggtitle(paste0('Plot with d = ', d, ' and  q = ', q)) + 
+    xlab('x') +
+    ylab('y') +
+    theme_light() + 
+    theme(panel.grid = element_blank(), legend.position = 'none')
+  
+  return(graph)
+}
+
 xx <- seq(0,1,length.out = 1000)
-knots <- seq(0 , 1 , length.out = q[2]+2)[2:(q[2]+1)]
-graph_1 <-power_functions( d[1],  q[2], knots, xx)
-plot(xx,graph_1[,7])
 
+p1 <- plot_func(1, 3)
+p2 <- plot_func(3, 3)
+p3 <- plot_func(1, 10)
+p4 <- plot_func(3, 10)
 
-xx <- seq(0,1,length.out = 1000)
-knots <- seq(0 , 1 , length.out = q[1]+2)[2:(q[1]+1)]
-graph_1 <-power_functions( d[2],  q[1], knots, xx)
-plot(xx,graph_1[,7])
+grid.arrange(p1, p2, p3, p4, ncol=2)
 
-
-xx <- seq(0,1,length.out = 1000)
-knots <- seq(0 , 1 , length.out = q[2]+2)[2:(q[2]+1)]
-graph_1 <-power_functions( d[2],  q[2], knots, xx)
-plot(xx,graph_1[,7])
 
 
 
@@ -122,13 +115,8 @@ plot(xx,graph_1[,7])
 
 ```
 
-
-
 ## ChatGPT - Power function
 
-
-
- 
 ## Dataset
 
 [TODO]
@@ -140,12 +128,9 @@ train_set <- read.csv("train.csv")
 
 ```
 
-
-
 ## Pre-processed
 
 [TODO]
-
 
 ```{r data - preproocessing 1 , warning= FALSE , echo = FALSE , fig.width = 10}
 
@@ -158,8 +143,4 @@ train_set <- train_set[(train_set$y > Lower)& (train_set$y < Upper),]
 
 ```
 
-
-##
-
-
-
+## 
