--- a/hw1_markdown.Rmd
+++ b/hw1_markdown.Rmd
@@ -80,42 +80,53 @@ power_functions <- function(d, q, knots, x){
 
 [TODO Matteo]
 
-```{r plot truncated power function, fig.height = 5, fig.width = 9, fig.align = "center", warning=FALSE}
-par(col='white', col.axis='white', col.lab='#B8BCC2', col.main='#B8BCC2', fg='white', bg="#2B3E50")
+```{r plot truncated power function, fig.showtext = TRUE, fig.height = 7, fig.width = 12, fig.align = "center"}
 
 plot_func <- function(d, q){
   knots <- seq(0, 1, length.out = q+2)[2 : (q+1)]
   df <- data.frame(power_functions(d, q, knots, xx))
+  n_col <- ncol(df)
+  legend_labels <- c()
+  for (i in 1:n_col) legend_labels <- c(legend_labels, paste0('g', i, '(x)'))
+  colnames(df) <- legend_labels
   df <- cbind('xx' = xx, df)
   df <- melt(df,  id.vars = 'xx')
   
   graph <- ggplot(data=df, aes(x = xx, y = value, color = variable)) + 
     geom_line(linewidth = 1) + 
-    ggtitle(paste0('Plot with d = ', d, ' and  q = ', q),) + 
+    ggtitle(paste0('Plot with d = ', d, ' and  q = ', q)) + 
     xlab('x') +
     ylab('y') +
     theme_light() + 
-    theme(panel.grid = element_blank(), legend.text = element_text(size = 4),
-          legend.background = element_rect(fill = "#2B3E50")) +  
-    
-    theme(
-      plot.background = element_rect(fill = "#2B3E50"), 
-      panel.background = element_rect(fill = "#2B3E50"),
-      title = element_text(colour = "white"),
-      axis.line = element_line(color = "white"),
-      axis.text = element_text(color = "white"))
+    theme(panel.grid = element_blank(),
+          panel.background = element_rect(fill = NA),
+          
+          title = element_text(colour = "white"),
+          
+          plot.background = element_rect(fill = NA, colour = "#2B3E50"), 
+          plot.title = element_text(size=16),
+          
+          axis.line = element_line(color = "white"),
+          axis.text = element_text(color = "white", size = 10),
+          axis.title.y = element_text(angle = 0, vjust = 0.5),
+          
+          legend.title = element_blank(),
+          legend.text = element_text(size = 10, color = 'white'),
+          legend.key = element_rect(color = NA, fill = NA),
+          legend.key.size = unit(0.6, "cm"),
+          legend.background = element_rect(fill = NA))
       
   return(graph)
 }
 
-xx <- seq(0,1,length.out = 1000)
+xx <- seq(0, 1, length.out = 1000)
 
 p1 <- plot_func(1, 3)
 p2 <- plot_func(3, 3)
 p3 <- plot_func(1, 10)
 p4 <- plot_func(3, 10)
 
-grid.arrange(p1, p2, p3, p4, ncol=2) 
+grid.arrange(p1, p2, p3, p4, ncol=2)
 
 ```
 
