--- a/hw1_markdown.Rmd
+++ b/hw1_markdown.Rmd
@@ -80,7 +80,7 @@ power_functions <- function(d, q, knots, x){
 
 [TODO Matteo]
 
-```{r plot truncated power function, fig.showtext = TRUE, fig.height = 7, fig.width = 12, fig.align = "center"}
+```{r plot truncated power function, fig.showtext = TRUE, fig.height = 7, fig.width = 12, fig.align = "center", message=FALSE, warning=FALSE}
 
 plot_func <- function(d, q){
   knots <- seq(0, 1, length.out = q+2)[2 : (q+1)]
@@ -133,17 +133,18 @@ grid.arrange(p1, p2, p3, p4, ncol=2)
 ## ChatGPT - Power function
 [TODOMatteo]  Vogliamo che i codici in questa sezione non vengano nascosti, come si fa? Se non riesci, basta un modo per mostrarlo come html (carino)
 
-Request:
+**Request:**
 
 " Can you implement a function in r to compute the truncated power basis, with parameters d, q, knots. Where $g_i=x^{i-1}$ if $i\le(d+1)$ else $g_{d+1+j} = \max((x-knots[j])^d, 0)$ for $j \in [1,q]$? "
 
-Response:
+**Response:**
 
 " Certainly! Here's a function in R that computes the truncated power basis you described:
 
-```{r, class.source = "fold-show"}
+```{r GPT, class.source = "fold-show"}
 
 truncated_power_basis <- function(x, d, q, knots) {
+  
   # Compute the first d+1 basis functions
   basis <- matrix(0, nrow = length(x), ncol = d+1)
   basis[,1] <- 1
@@ -178,7 +179,145 @@ M <- truncated_power_basis(x, d, q, knots)
 
 ```
 
-Ops! Looks like the ChatBot response doesn't work.
+Ops! Looks like the ChatBot response doesn't work. So we will try and see how much we have tell it in order to obtain a working function, first thing to do is give it the error we got. 
+
+*For this following part the code will not be directly shown.*
+
+**Second message request: **
+
+"It seems like there is an error with your function, if i try to use it I get this error: "Error in `[<-`(`*tmp*`, , d + 1 + j, value = pmax((x - knots[j])^d, 0)): subscript out of bounds". Could you give me the correct implementation?"
+
+**Second response:**
+
+" I apologize for the error in my previous implementation. Here's an updated version of the truncated_power_basis function that should work correctly:
+
+```{r GPtest2, error=TRUE}
+
+truncated_power_basis <- function(x, d, q, knots) {
+  # Compute the first d+1 basis functions
+  basis <- matrix(0, nrow = length(x), ncol = d+1)
+  basis[,1] <- 1
+  for (i in 2:(d+1)) {
+    basis[,i] <- x^(i-1)
+  }
+  
+  # Compute the remaining basis functions using knots
+  if (q > 0) {
+    for (j in 1:q) {
+      basis[,d+j+1] <- pmax((x - knots[j])^d, 0)
+    }
+  }
+  
+  return(basis)
+}
+```
+
+..." 
+
+Again it doesn't work, so this time we give the ChatBot a hint, since we know that the problem is that there isn't enough allocated space for the matrix, this should have $q+d+1$ columns instead of $d+1$.
+
+**Third message:**
+
+"It doesn't solve it, I think the problem is in the dimension of the matrix."
+
+**Third response:**
+
+"
+I apologize for the continued issue. You are correct that there is an issue with the dimension of the matrix. Here is the corrected implementation of the truncated_power_basis function:
+```{r GPtest3, error=TRUE}
+
+truncated_power_basis <- function(x, d, q, knots) {
+  # Compute the first d+1 basis functions
+  basis <- matrix(0, nrow = length(x), ncol = d+1)
+  basis[,1] <- 1
+  for (i in 2:(d+1)) {
+    basis[,i] <- x^(i-1)
+  }
+  
+  # Compute the remaining basis functions using knots
+  if (q > 0) {
+    for (j in 1:q) {
+      basis[,d+j+1] <- pmax((x - knots[j])^(d*(x >= knots[j])), 0)
+    }
+  }
+  
+  return(basis)
+}
+```
+
+..."
+
+At the end since also this implementation doesn't work we decided to tell the ChatBot how to solve the issue
+
+**Forth message:**
+
+"Still not good, shouldn't the matrix have $q+d+1$ columns since we are trying to evaluate $q+d+1$ functions?"
+
+**Forth response:**
+
+"
+You are correct. I apologize for the error. The matrix should have $q + d + 1$ columns since we are computing a total of $q + d + 1$ basis functions. Here is the corrected implementation:
+```{r GPtest4, error=TRUE}
+truncated_power_basis <- function(x, d, q, knots) {
+  # Compute the first d+1 basis functions
+  basis <- matrix(0, nrow = length(x), ncol = d+1)
+  basis[,1] <- 1
+  for (i in 2:(d+1)) {
+    basis[,i] <- x^(i-1)
+  }
+  
+  # Compute the remaining basis functions using knots
+  if (q > 0) {
+    for (j in 1:q) {
+      basis[,d+j+1] <- pmax((x - knots[j])^(d*(x >= knots[j])), 0)
+    }
+  }
+  
+  return(basis)
+}
+
+```
+
+..." 
+
+But again even if we straight up told the Bot what's the problem and how to solve it the function is not working! At the end the only thing left to do is just tell it the code it should use.
+
+**Fifth (and final) message:** 
+"You are not allocating the memory for the matrix correctly, basis should be defined as "basis <- matrix(0, nrow = length(x), ncol = d+q+1)""
+
+**Fifth response:**
+
+"You are correct again. I apologize for the confusion. Here is the corrected implementation:
+
+```{r GPtest5, error=TRUE, class.source = "fold-show"}
+truncated_power_basis <- function(x, d, q, knots) {
+  # Compute the first d+1 basis functions
+  basis <- matrix(0, nrow = length(x), ncol = d+q+1)
+  basis[,1] <- 1
+  for (i in 2:(d+1)) {
+    basis[,i] <- x^(i-1)
+  }
+  
+  # Compute the remaining basis functions using knots
+  if (q > 0) {
+    for (j in 1:q) {
+      basis[,d+j+1] <- pmax((x - knots[j])^(d*(x >= knots[j])), 0)
+    }
+  }
+  ?pmax
+  return(basis)
+}
+```
+
+To use this corrected function, simply call truncated_power_basis(x, d, q, knots) with your desired inputs. For example, to compute the truncated power basis with d=3, q=2, and knots=c(0.5, 1.5) for the vector x=c(0.2, 0.4, 0.6, 0.8, 1.0, 1.2, 1.4), you would call truncated_power_basis(x, 3, 2, c(0.5, 1.5)). This should return a matrix with 7 columns. "
+
+Finally we obtain a function without errors!
+
+```{r GPtest final, error=TRUE, class.source = "fold-show"}
+truncated_power_basis(seq(0,1,length.out=6), 3, 2, c(0.1, 0.5))
+```
+
+Sadly though we realize that from the third response on the ChatBot changed a line of code from $basis[,d+j+1] <- pmax((x - knots[j])^d, 0)$ to $basis[,d+j+1] <- pmax((x - knots[j])^{d*(x >= knots[j])}, 0)$ and now the function indeed does gives an output, but it's not the right one.
 
 # TODO Finisci di scrivere evaluation
 
