--- a/hw1_markdown.Rmd
+++ b/hw1_markdown.Rmd
@@ -35,7 +35,8 @@ set.seed(seed)
 
 # Libraries and Data ---------------------------------------------------------------
 
-pkt <- c('glmnet', 'NMOF', 'parallel', 'snow', 'ggplot2', 'reshape2', 'gridExtra')
+pkt <- c('glmnet', 'NMOF', 'parallel', 'snow', 'ggplot2', 'reshape2', 'gridExtra','tidyverse','manipulate')
+
 invisible(lapply(pkt, require, character.only = TRUE))
 
 ```
@@ -78,7 +79,7 @@ power_functions <- function(d, q, knots, x){
 
 ```
 
-[TODO Matteo]
+
 
 ```{r plot truncated power function, fig.showtext = TRUE, fig.height = 7, fig.width = 12, fig.align = "center", message=FALSE, warning=FALSE}
 
@@ -131,7 +132,7 @@ grid.arrange(p1, p2, p3, p4, ncol=2)
 ```
 
 ## ChatGPT - Power function
-[TODOMatteo]  Vogliamo che i codici in questa sezione non vengano nascosti, come si fa? Se non riesci, basta un modo per mostrarlo come html (carino)
+
 
 **Request:**
 
@@ -210,6 +211,7 @@ truncated_power_basis <- function(x, d, q, knots) {
   
   return(basis)
 }
+
 ```
 
 ..." 
@@ -332,21 +334,6 @@ train_set <- read.csv("train.csv")
 
 ```
 
-## Pre-processed
-
-[TODO]
-
-```{r data - preproocessing 1 , warning= FALSE , echo = FALSE , fig.width = 10}
-
-# Outlier Detection
-quant <- range(quantile(train_set$y, c(0.25, 0.75)))
-Lower <- quant[1] - 1.5*(diff(quant))
-Upper <- quant[2] + 1.5*(diff(quant))
-
-train_set <- train_set[(train_set$y > Lower)& (train_set$y < Upper),]
-
-```
-
 ## Vanilla Cross Validation
 
 ```{r functions VCV}
@@ -356,7 +343,10 @@ compute_weights <- function(knots , dataset){
   # Number of knots
   n <- length(knots)
   # Add the bounds 
-  knots <- c(0, knots, 1)
+  knots <- c(0, knots)
+  if(knots[n+1] != 1){
+    knots <- c(knots, 1)
+  }
    # Define the matrix
   xx <- rep(NA, length(dataset$x))
   
@@ -378,13 +368,13 @@ compute_weights <- function(knots , dataset){
   
   return(xx)
 }
-if(sum(NULL)){
-  print('cciao')
-}
+
 
 # Function used for the cross validation
 cross_val_func <- function(x){
-  d <- x[1]
+  set.seed(070720)
+  # Define the parameters
+  d <- x[1]   
   q <- x[2]
   k <- x[3]
   a <- x[4]
@@ -393,22 +383,29 @@ cross_val_func <- function(x){
   
   # size of the fold
   l_folds <- nrow(train_set) / k 
+  # Pre-set the scores (MSE)
   score <- rep(NA, k)
+  # Random  sample of the indices
+  idx <- sample((1:nrow(train_set)),nrow(train_set))
+  #Loop over the folds
   for ( i in 1:k){
-    idx <- ((i-1)*l_folds+1): (i*l_folds)
-    cv_test <- train_set[idx,]
-    cv_train <- train_set[-idx,]
+    # Set the validation and train set
+    cv_test <- train_set[idx[((i-1)*l_folds+1): (i*l_folds)],]
+    cv_train <- train_set[-idx[((i-1)*l_folds+1): (i*l_folds)],]
     
-    
+    # Conpute the knots
     knots <- seq(1/q, p, length.out=q)
     
+    # Compute the power function on the training set
     M_cv_train <- power_functions(d = d, q = q, knots = knots, x = cv_train$x)
-    # M_cv_train <- data.frame(M_cv_train , target = cv_train$y)
     
+    # Compute the power function on the valifation set
     M_cv_test <-  power_functions(d = d, q = q, knots = knots, x = cv_test$x)
 
+    # compute the weights, based on the conditional variance
     hat_weights <- compute_weights(knots = knots , cv_train)
     
+    # Train the model
     cv_model <- glmnet(M_cv_train, 
                        cv_train$y,
                        family = "gaussian", 
@@ -416,11 +413,236 @@ cross_val_func <- function(x){
                        lambda=l,
                        weights = hat_weights)
     
+    # Preditcion on the validation set
     cv_predictions <- predict(cv_model, M_cv_test)
     
+    # Compute the score
     score[i] <- sqrt(mean((cv_test$y-cv_predictions)^2))
     
   }
+  # Return the mean MSE  
   return(mean(score))
 }
 ```
+
+```{r parametes}
+k <- c(4)
+d_grid <- c(1, 3) 
+q_grid <- seq(3, 30, 1)
+positions <- c(0.5, 0.6, 0.7, 0.8)
+lambdas <- 10^seq(-2.5, -1, .25)
+alphas <- seq(0, 1, 0.1)
+# Set the parameter for the CV
+parameters <- list(d_grid, q_grid, k, alphas, lambdas, positions)
+
+
+```
+
+```{r cv vanilla, eval = FALSE}
+# CV vanilla --------------------------------------------------------------
+# Select the best combination of parameters
+cl = makeCluster(detectCores())
+clusterExport(cl, c('train_set', 'power_functions', 'glmnet', 'compute_weights'))
+res <- gridSearch(cross_val_func, levels=parameters, method = 'snow', cl=cl)
+stopCluster(cl)
+best_params <- res$minlevels
+names(best_params) <- c('d', 'q', 'k', 'alpha', 'lambda', 'position')
+```
+
+
+```{r training with vanilla parameters, warning = FALSE}
+
+load("RData/best_params_vanilla.RData")
+# Prediction --------------------------------------------------------------
+
+# Using the best parameters
+d_best <- best_params[1]
+q_best <- best_params[2]
+k_best <- best_params[3]
+a_best <- best_params[4]
+l_best <- best_params[5]
+p_best <- best_params[6]
+
+# Compute the predictions
+knots <- seq(1/q_best, p_best, length.out=q_best)
+M_train <- power_functions(d = d_best, q = q_best, knots = knots, x = train_set$x)
+M_test <- power_functions( d = d_best, q = q_best, knots = knots, x = test_set_vero$x)
+knots_test <- power_functions( d = d_best, q = q_best, knots = knots, x = knots)
+hat_weights <- compute_weights(knots , train_set)
+final_model <- glmnet(M_train, train_set$y, family ="gaussian", 
+                      alpha=a_best, lambda=l_best , weights = hat_weights )
+predictions <- predict(final_model,M_test)
+
+```
+
+[TODOMatteo] Se vuoi metti il plot più figo
+```{r plot after vanilla , warning=FALSE}
+
+plot(train_set$x,train_set$y,cex = .5, pch = 16, col = "Green")
+points(test_set_vero$x,predictions, col = "orange", cex = .5, pch=16)
+grid()
+points(knots, predict(final_model, knots_test), col='red', pch=3, cex=1, lwd=4)
+```
+
+
+## Update the parameter
+
+
+```{r update parameter , warning=FALSE}
+# Update Parameters -------------------------------------------------------------
+
+# Using the best parameters
+d_best <- best_params[1]
+q_best <- best_params[2]
+k_best <- best_params[3]
+a_best <- best_params[4]
+l_best <- best_params[5]
+p_best <- best_params[6]
+
+d <- d_best
+q <- q_best+seq(-2,2,1)
+k <- k_best
+a <- a_best
+l <- l_best + seq(-0.005,0.005,0.001)
+p <- p_best + seq(-0.05, 0.05, 0.025)
+
+# Set the parameter for the CV
+parameters <- list(d, q, k, a, l, p)
+
+```
+
+
+## Nested Cross Validation
+
+```{r nested cross validation}
+
+# Secondary function for nested CV
+inner_crossval <- function(x, train_set){
+  # define the parameters
+  d <- x[1]
+  q <- x[2]
+  K <- x[3]
+  a <- x[4]
+  l <- x[5] 
+  p <- x[6]
+  
+  # Pre-set the error
+  e_in <- c()
+  # Loop over k-1 fold
+  for(k in (1:(K-1))){
+    # Set the indices
+    idx <- ((k-1)*l_folds+1): (k*l_folds)
+    
+    # Validation set
+    cv_test <- train_set[idx,]
+    # Train set
+    cv_train <- train_set[-idx,]
+    
+    # Define the knots
+    knots <- seq(1/q, p, length.out=q)
+    
+    
+    #Computhe the power functions
+    M_cv_train <- power_functions(d = d, q = q, knots = knots, x = cv_train$x)
+    M_cv_test <-  power_functions(d = d, q = q, knots = knots, x = cv_test$x)
+    
+    # Computhe the weights based on the conditional variance
+    hat_weights <- compute_weights(knots = knots , cv_train)
+      
+    # Train the model
+    cv_model <- glmnet(M_cv_train, 
+                       cv_train$y,
+                       family = "gaussian", 
+                       alpha=a, 
+                       lambda=l,
+                       weights = hat_weights)
+    
+    # prediction
+    cv_predictions <- predict(cv_model, M_cv_test)
+    
+    # Compute the error
+    e_temp <- (cv_test$y-cv_predictions)^2
+    e_in <- c(e_in, e_temp)
+  }
+  
+  return(e_in)
+}
+
+# Main function for the nested CV
+nested_crossval <- function(x){
+  # set the parameters
+  d <- x[1]
+  q <- x[2]
+  K <- x[3]
+  a <- x[4]
+  l <- x[5] 
+  p <- x[6]
+  R <- 250
+  
+  # Define the length of the folds
+  l_folds <<- nrow(train_set) / K
+  
+  #
+  a_list <- rep(NA, R*K)
+  #
+  b_list <- rep(NA, R*K)
+  
+  for(r in (1:R)){
+    idx <- sample((1:nrow(train_set)),nrow(train_set))
+    
+    for(k in (1:K)){  
+      cv_test <- train_set[idx[((k-1)*l_folds+1): (k*l_folds)],]
+      cv_train <- train_set[-idx[((k-1)*l_folds+1): (k*l_folds)],]
+      
+      # inner cross
+      e_in <- inner_crossval(x, cv_train)
+      
+      # Outer cross
+      knots <- seq(1/q, p, length.out=q)
+     
+      M_cv_train <- power_functions(d = d, q = q, knots = knots, x = cv_train$x)
+      M_cv_test <-  power_functions(d = d, q = q, knots = knots, x = cv_test$x)
+      
+      hat_weights <- compute_weights(knots = knots , cv_train)
+      
+      cv_model <- glmnet(M_cv_train, 
+                         cv_train$y,
+                         family = "gaussian", 
+                         alpha=a, 
+                         lambda=l,
+                         weights = hat_weights)
+      
+      cv_predictions <- predict(cv_model, M_cv_test)
+      
+      e_out <- (cv_test$y-cv_predictions)^2
+      
+      a_list[(r-1)*K+k] <- (mean(e_in)-mean(e_out))^2 
+      b_list[(r-1)*K+k] <- (sd(e_out)^2)/l_folds
+      #es <- c(es, e_in)   
+    }
+  }
+  
+  mse <- mean(a_list)-mean(b_list)
+  #err <- mean(es)
+  return(mse)
+}
+
+```
+
+
+```{r run nested cv , eval = FALSE}
+# CV nested --------------------------------------------------------------
+cl = makeCluster(detectCores())
+clusterExport(cl, c('train_set','compute_weights' ,'inner_crossval', 'power_functions', 'glmnet'))
+res <- gridSearch(nested_crossval, levels=parameters, method = 'snow', cl=cl)
+stopCluster(cl)
+best_params <- res$minlevels
+names(best_params) <- c('d', 'q', 'k', 'alpha', 'lambda','position')
+```
+
+```{r plot after nested cv}
+
+```
+
+
+# Conclusion & Final Remark
