--- a/hw1_markdown.Rmd
+++ b/hw1_markdown.Rmd
@@ -471,7 +471,7 @@ hat_weights <- compute_weights(knots , train_set)
 final_model <- glmnet(M_train, train_set$y, family ="gaussian", 
                       alpha=a_best, lambda=l_best , weights = hat_weights )
 predictions <- predict(final_model,M_test)
-
+best_params
 ```
 
 
@@ -658,9 +658,63 @@ best_params <- res$minlevels
 names(best_params) <- c('d', 'q', 'k', 'alpha', 'lambda','position')
 ```
 
-```{r plot after nested cv}
 
+```{r training with nested parameters, warning = FALSE}
+
+# Prediction --------------------------------------------------------------
+
+# Using the best parameters
+d_best <- best_params[1]
+q_best <- best_params[2]
+k_best <- best_params[3]
+a_best <- best_params[4]
+l_best <- best_params[5]
+p_best <- best_params[6]
+
+# Compute the predictions
+knots <- seq(1/q_best, p_best, length.out=q_best)
+M_train <- power_functions(d = d_best, q = q_best, knots = knots, x = train_set$x)
+M_test <- power_functions( d = d_best, q = q_best, knots = knots, x = test_set_vero$x)
+knots_test <- power_functions( d = d_best, q = q_best, knots = knots, x = knots)
+hat_weights <- compute_weights(knots , train_set)
+final_model <- glmnet(M_train, train_set$y, family ="gaussian", 
+                      alpha=a_best, lambda=l_best , weights = hat_weights )
+predictions <- predict(final_model, M_test)
+best_params
 ```
+
+
+
+```{r plot after nested, fig.showtext = TRUE, fig.height = 5, fig.width = 10, fig.align = "center", message=FALSE, warning=FALSE}
+
+
+colors <- c("Real Data" = "gold", "Predicted" = "white", "Knots" = "red")
+point_size <- 1.7
+cross_size <- 3
+
+ggplot() +
+  geom_point(aes(x = train_set$x, y = train_set$y, color = 'Real Data'), size = point_size, shape=16) +
+  geom_point(aes(x = test_set_vero$x, y = predictions, color = 'Predicted'), size = point_size) +
+  geom_point(aes(x = knots, y = predict(final_model, knots_test), color = 'Knots'), shape = 4, stroke = 1.7, size = cross_size) +
+  theme_light() +
+  labs(x = "x", y = "y", color = "     Legend", title = 'Prediction on WMAP data', shape = "", color="") +
+  scale_color_manual(values = colors) +
+  guides(color = guide_legend(override.aes=list(shape = c(4, 16, 16), size = 2))) +
+  theme(legend.title = element_text(size=12, color='white'),
+        plot.title = element_text(hjust = 0.5,size=16),
+        legend.text = element_text(size = 10, color = 'white'),
+        legend.key = element_rect(color = NA, fill = NA),
+        legend.background = element_rect(fill = NA),
+        panel.grid.major = element_line(size = 0.3, linetype = 2),
+        panel.grid.minor = element_line(size = 0, linetype = 2),
+        panel.background = element_rect(fill = NA),
+        title = element_text(colour = "white"),
+        plot.background = element_rect(fill = NA, colour = "#2B3E50"), 
+        axis.line = element_line(color = "white"),
+        axis.text = element_text(color = "white", size = 10),
+        axis.title.y = element_text(angle = 0, vjust = 0.5))
+```
+
 
 
 # Conclusion & Final Remark
